sakura-traefik/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics
spec:
  ports:
    - name: metrics
      port: 9100
      targetPort: metrics
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: sakura-traefik
  type: ClusterIP
