sakura-traefik/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik

spec:
  externalTrafficPolicy: Cluster
